added style and first contact

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!-- Navigation Bar -->
     <div class="navbar">
-        <a href='discover-others.html'>Discover Others</a>
+        <a href='people/index.html'>Discover Others</a>
         <a href='#be-discovered'>Be Discovered</a>
         <!-- <a href="signup.html">Signup</a>
         <a href="login.html">Login</a> -->
