--- a/people/gavin-palmer.html
+++ b/people/gavin-palmer.html
@@ -3,20 +3,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gavin Palmer - Profile</title>
-  <!-- Include shared styles and scripts -->
+  <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
+  <div class="navigation-back">
+    <a href="index.html">← Back to People</a>
+  </div>
   <header>
     <h1>Gavin Palmer</h1>
-    <p>Husband, Father, Engineer, and Christish</p>
   </header>
+  <div class="">
+    <h2>About</h2>
+    <p>Husband, Father, Engineer, and Christish</p>
+  </div>
   <main>
-    <h2>Interests</h2>
+    <h3>YouTube Channels</h3>
+    <ul>
+      <li><a href="../channels/rightinchrist.html">@RightInChrist</a></li><li><a href="../channels/herolfg.html">@herolfg</a></li>
+    </ul>
+    
+    <h3>Interests</h3>
     <ul>
       <li>practicing loving people</li><li>technology</li>
     </ul>
-  </main>
+    </main>
   <!-- Footer and additional content -->
+  <footer class="footer"></footer>
 </body>
 </html>
