--- a/channels/grimgriz.html
+++ b/channels/grimgriz.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>@herolfg</title>
+  <title>@GrimGriz</title>
   <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
@@ -13,18 +13,13 @@
     <a href="index.html">← Back to Channels</a>
   </div>
   <header>
-    <h1>@herolfg</h1>
-    <p>Owned by <a href="../people/gavin-palmer.html">Gavin Palmer</a></p>
+    <h1>@GrimGriz</h1>
+    <p>Owned by <a href="../people/grimgriz.html">GrimGriz</a></p>
   </header>
   <main>
     <h2>About the Channel</h2>
-    <p>Seeking the ideal.</p>
-    <aside>
-    <h3>Interests</h3>
-    <ul>
-      <li>technology</li>
-    </ul>
-</aside>
+    <p>Even Broken Clocks are right twice a day.</p>
+    <aside></aside>
   </main>
   <!-- Footer and additional content -->
   <footer class="footer"></footer>
