--- a/channels/rightinchrist.html
+++ b/channels/rightinchrist.html
@@ -3,24 +3,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>@RightInChrist</title>
-  <!-- Include shared styles and scripts -->
+  <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
+  <div class="navigation-back">
+    <a href="index.html">← Back to Channels</a>
+  </div>
   <header>
     <h1>@RightInChrist</h1>
-    <p>Owned by Gavin Palmer</p>
+    <p>Owned by <a href="../people/gavin-palmer.html">Gavin Palmer</a></p>
   </header>
   <main>
     <h2>About the Channel</h2>
     <p>I decided to practice making Jesus my king on October 12, 2023. My videos will attempt to point people towards a relationship with God through Jesus who will go after the lost sheep. My king goes after your worst enemy to give them the best gift which is to know God.</p>
     <aside>
-      <h3>Interests</h3>
-      <ul>
-        <li>practicing loving people</li><li>technology</li><li>play</li>
-      </ul>
-    </aside>
+    <h3>Interests</h3>
+    <ul>
+      <li>practicing loving people</li><li>technology</li><li>play</li>
+    </ul>
+</aside>
   </main>
   <!-- Footer and additional content -->
+  <footer class="footer"></footer>
 </body>
 </html>
