--- a/people/grimgriz.html
+++ b/people/grimgriz.html
@@ -5,27 +5,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>@herolfg</title>
+  <title>GrimGriz - Profile</title>
   <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
   <div class="navigation-back">
-    <a href="index.html">← Back to Channels</a>
+    <a href="index.html">← Back to People</a>
   </div>
   <header>
-    <h1>@herolfg</h1>
-    <p>Owned by <a href="../people/gavin-palmer.html">Gavin Palmer</a></p>
+    <h1>GrimGriz</h1>
   </header>
+  <div class="">
+    <h2>About</h2>
+    <p>undefined</p>
+  </div>
   <main>
-    <h2>About the Channel</h2>
-    <p>Seeking the ideal.</p>
-    <aside>
-    <h3>Interests</h3>
+    <h3>YouTube Channels</h3>
     <ul>
-      <li>technology</li>
+      <li><a href="../channels/grimgriz.html">@GrimGriz</a></li>
     </ul>
-</aside>
-  </main>
+    </main>
   <!-- Footer and additional content -->
   <footer class="footer"></footer>
 </body>
