youtube interaction videos

--- a/people/gavin-palmer.html
+++ b/people/gavin-palmer.html
@@ -29,6 +29,11 @@
     <ul>
       <li>practicing loving people</li><li>technology</li>
     </ul>
+    
+    <h3>YouTube Interaction Videos</h3>
+    <ul>
+      <li><a href="https://www.youtube.com/watch?v=s1I4Vxv61QA">Sorting Myself Out with Mercury, Gavin, and GrimGriz</a></li>
+    </ul>
     </main>
   <!-- Footer and additional content -->
   <footer class="footer"></footer>
