--- a/people/grimgriz.html
+++ b/people/grimgriz.html
@@ -24,6 +24,11 @@
     <ul>
       <li><a href="../channels/grimgriz.html">@GrimGriz</a></li>
     </ul>
+    
+    <h3>YouTube Interaction Videos</h3>
+    <ul>
+      <li><a href="https://www.youtube.com/watch?v=s1I4Vxv61QA">Sorting Myself Out with Mercury, Gavin, and GrimGriz</a></li>
+    </ul>
     </main>
   <!-- Footer and additional content -->
   <footer class="footer"></footer>
