--- a/people/gavin-palmer.html
+++ b/people/gavin-palmer.html
@@ -30,6 +30,11 @@
       <li>practicing loving people</li><li>technology</li>
     </ul>
     
+    <h3>YouTube Attention Giving Self Report</h3>
+    <ul>
+      <li><a href="../channels/paulvanderklay.html">@PaulVanderKlay</a></li><li><a href="../channels/grimgriz.html">@GrimGriz</a></li>
+    </ul>
+    
     <h3>YouTube Interaction Videos</h3>
     <ul>
       <li><a href="https://www.youtube.com/watch?v=s1I4Vxv61QA">Sorting Myself Out with Mercury, Gavin, and GrimGriz</a></li>
