--- a/channels/magmidt.html
+++ b/channels/magmidt.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>@HeroLFG</title>
+  <title>@magmidt</title>
   <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
@@ -13,16 +13,16 @@
     <a href="index.html">← Back to Channels</a>
   </div>
   <header>
-    <h1>@HeroLFG</h1>
-    <p>Owned by <a href="../people/gavin-palmer.html">Gavin Palmer</a></p>
+    <h1>@magmidt</h1>
+    <p>Owned by <a href="../people/magnus-midtbø.html">Magnus Midtbø</a></p>
   </header>
   <main>
     <h2>About the Channel</h2>
-    <p>Seeking the ideal.</p>
+    <p>Popular rock climbing channel.</p>
     <aside>
     <h3>Interests</h3>
     <ul>
-      <li>technology</li>
+      <li>rock climbing</li>
     </ul>
 </aside>
   </main>
