--- a/channels/whitestonename.html
+++ b/channels/whitestonename.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>@HeroLFG</title>
+  <title>@WhiteStoneName</title>
   <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
@@ -13,18 +13,13 @@
     <a href="index.html">← Back to Channels</a>
   </div>
   <header>
-    <h1>@HeroLFG</h1>
-    <p>Owned by <a href="../people/gavin-palmer.html">Gavin Palmer</a></p>
+    <h1>@WhiteStoneName</h1>
+    <p>Owned by <a href="../people/luke-thompson.html">Luke Thompson</a></p>
   </header>
   <main>
     <h2>About the Channel</h2>
-    <p>Seeking the ideal.</p>
-    <aside>
-    <h3>Interests</h3>
-    <ul>
-      <li>technology</li>
-    </ul>
-</aside>
+    <p>A video diary of intellectual musings. Mainly about God, faith, community, ontology. I ruminate & contemplate on things  in a circumambulating way. “When I talk about anything, I’m talking about everything.”</p>
+    <aside></aside>
   </main>
   <!-- Footer and additional content -->
   <footer class="footer"></footer>
