talk with Jacob

--- a/people/grimgriz.html
+++ b/people/grimgriz.html
@@ -27,7 +27,7 @@
     
     <h3>YouTube Interaction Videos</h3>
     <ul>
-      <li><a href="https://www.youtube.com/watch?v=s1I4Vxv61QA">Sorting Myself Out with Mercury, Gavin, and GrimGriz</a></li>
+      <li>2021-01-01 <a href="https://www.youtube.com/watch?v=s1I4Vxv61QA">Sorting Myself Out with Mercury, Gavin, and GrimGriz</a></li>
     </ul>
     </main>
   <!-- Footer and additional content -->
