--- a/people/gavin-palmer.html
+++ b/people/gavin-palmer.html
@@ -37,7 +37,7 @@
     
     <h3>YouTube Interaction Videos</h3>
     <ul>
-      <li><a href="https://www.youtube.com/watch?v=s1I4Vxv61QA">Sorting Myself Out with Mercury, Gavin, and GrimGriz</a></li>
+      <li>2021-01-01 <a href="https://www.youtube.com/watch?v=s1I4Vxv61QA">Sorting Myself Out with Mercury, Gavin, and GrimGriz</a></li><li>2021-02-27 <a href="https://www.youtube.com/watch?v=pbj1ungrZQA">Jacob Faturechi and Distributed Cognition</a></li>
     </ul>
     </main>
   <!-- Footer and additional content -->
