--- a/people/jacob-faturechi.html
+++ b/people/jacob-faturechi.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mercury.Black. - Profile</title>
+  <title>Jacob Faturechi - Profile</title>
   <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
@@ -13,7 +13,7 @@
     <a href="index.html">← Back to People</a>
   </div>
   <header>
-    <h1>Mercury.Black.</h1>
+    <h1>Jacob Faturechi</h1>
   </header>
   <div class="">
     <h2>About</h2>
@@ -22,12 +22,7 @@
   <main>
     <h3>YouTube Channels</h3>
     <ul>
-      <li><a href="../channels/mercury.black..html">@Mercury.Black.</a></li>
-    </ul>
-    
-    <h3>YouTube Interaction Videos</h3>
-    <ul>
-      <li>2021-01-01 <a href="https://www.youtube.com/watch?v=s1I4Vxv61QA">Sorting Myself Out with Mercury, Gavin, and GrimGriz</a></li>
+      <li><a href="../channels/faturechi.html">@faturechi</a></li>
     </ul>
     </main>
   <!-- Footer and additional content -->
