--- a/channels/.html
+++ b/channels/.html
@@ -5,26 +5,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Jacob Faturechi - Profile</title>
+  <title></title>
   <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
   <div class="navigation-back">
-    <a href="index.html">← Back to People</a>
+    <a href="index.html">← Back to Channels</a>
   </div>
   <header>
-    <h1>Jacob Faturechi</h1>
+    <h1></h1>
+    <p>Owned by <a href="../people/tyler-hollett.html">Tyler Hollett</a></p>
   </header>
-  <div class="">
-    <h2>About</h2>
-    <p>I mostly make videos about the Hebrew Bible.</p>
-  </div>
   <main>
-    <h3>YouTube Channels</h3>
-    <ul>
-      <li><a href="../channels/faturechi.html">@faturechi</a></li>
-    </ul>
-    </main>
+    <h2>About the Channel</h2>
+    <p>undefined</p>
+    <aside></aside>
+  </main>
   <!-- Footer and additional content -->
   <footer class="footer"></footer>
 </body>
