--- a/people/gavin-palmer.html
+++ b/people/gavin-palmer.html
@@ -37,7 +37,7 @@
     
     <h3>YouTube Interaction Videos</h3>
     <ul>
-      <li>2021-01-01 <a href="https://www.youtube.com/watch?v=s1I4Vxv61QA">Sorting Myself Out with Mercury, Gavin, and GrimGriz</a></li><li>2021-01-27 <a href="https://www.youtube.com/watch?v=pvWVaMaljJE">HeroLFG - Live in Lemon Land</a></li><li>2021-02-27 <a href="https://www.youtube.com/watch?v=pbj1ungrZQA">Jacob Faturechi and Distributed Cognition</a></li><li>2021-05-12 <a href="https://www.youtube.com/watch?v=5kn9_QrVrPU">Return to Lemonland - Potato People and Huck Finn w/ HeroLFG</a></li>
+      <li>2021-01-01 <a href="https://www.youtube.com/watch?v=s1I4Vxv61QA">Sorting Myself Out with Mercury, Gavin, and GrimGriz</a></li><li>2021-01-27 <a href="https://www.youtube.com/watch?v=pvWVaMaljJE">HeroLFG - Live in Lemon Land</a></li><li>2021-02-27 <a href="https://www.youtube.com/watch?v=pbj1ungrZQA">Jacob Faturechi and Distributed Cognition</a></li><li>2021-05-12 <a href="https://www.youtube.com/watch?v=5kn9_QrVrPU">Return to Lemonland - Potato People and Huck Finn w/ HeroLFG</a></li><li>2021-10-28 <a href="https://www.youtube.com/watch?v=FoVca00pe_o">Crypto-Christ Frequency - GrimGriz/HeroLFG (Unedited)</a></li><li>2021-10-29 <a href="https://www.youtube.com/watch?v=xH1-4-Qepz8">herolfg #43 - how to do peace on Earth</a></li>
     </ul>
     </main>
   <!-- Footer and additional content -->
