--- a/people/gavin-palmer.html
+++ b/people/gavin-palmer.html
@@ -15,10 +15,12 @@
   <header>
     <h1>Gavin Palmer</h1>
   </header>
-  <div class="">
-    <h2>About</h2>
-    <p>Husband, Father, Engineer, and Christish</p>
-  </div>
+  
+    <div class="">
+      <h2>About</h2>
+      <p>Husband, Father, Engineer, and Christish</p>
+    </div>
+    
   <main>
     <h3>YouTube Channels</h3>
     <ul>
@@ -37,7 +39,7 @@
     
     <h3>YouTube Interaction Videos</h3>
     <ul>
-      <li>2021-01-01 <a href="https://www.youtube.com/watch?v=s1I4Vxv61QA">Sorting Myself Out with Mercury, Gavin, and GrimGriz</a></li><li>2021-01-27 <a href="https://www.youtube.com/watch?v=pvWVaMaljJE">HeroLFG - Live in Lemon Land</a></li><li>2021-02-27 <a href="https://www.youtube.com/watch?v=pbj1ungrZQA">Jacob Faturechi and Distributed Cognition</a></li><li>2021-05-12 <a href="https://www.youtube.com/watch?v=5kn9_QrVrPU">Return to Lemonland - Potato People and Huck Finn w/ HeroLFG</a></li><li>2021-10-28 <a href="https://www.youtube.com/watch?v=FoVca00pe_o">Crypto-Christ Frequency - GrimGriz/HeroLFG (Unedited)</a></li><li>2021-10-29 <a href="https://www.youtube.com/watch?v=xH1-4-Qepz8">herolfg #43 - how to do peace on Earth</a></li><li>2021-11-10 <a href="https://www.youtube.com/watch?v=zUJ2jNxrlX8">Lets Talk About Solutions - Hero LFG</a></li>
+      <li>2021-01-01 <a href="https://www.youtube.com/watch?v=s1I4Vxv61QA">Sorting Myself Out with Mercury, Gavin, and GrimGriz</a></li><li>2021-01-27 <a href="https://www.youtube.com/watch?v=pvWVaMaljJE">HeroLFG - Live in Lemon Land</a></li><li>2021-02-27 <a href="https://www.youtube.com/watch?v=pbj1ungrZQA">Jacob Faturechi and Distributed Cognition</a></li><li>2021-05-12 <a href="https://www.youtube.com/watch?v=5kn9_QrVrPU">Return to Lemonland - Potato People and Huck Finn w/ HeroLFG</a></li><li>2021-10-28 <a href="https://www.youtube.com/watch?v=FoVca00pe_o">Crypto-Christ Frequency - GrimGriz/HeroLFG (Unedited)</a></li><li>2021-10-29 <a href="https://www.youtube.com/watch?v=xH1-4-Qepz8">herolfg #43 - how to do peace on Earth</a></li><li>2021-11-10 <a href="https://www.youtube.com/watch?v=zUJ2jNxrlX8">Lets Talk About Solutions - Hero LFG</a></li><li>2021-11-10 <a href="https://www.youtube.com/watch?v=q7clE0YFb3U">Coffee with Kim and Gavin ‐ Husband and Wife share their morning coffee convo</a></li>
     </ul>
     </main>
   <!-- Footer and additional content -->
