--- a/people/kimberly-palmer.html
+++ b/people/kimberly-palmer.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Luke Thompson - Profile</title>
+  <title>Kimberly Palmer - Profile</title>
   <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
@@ -13,13 +13,18 @@
     <a href="index.html">← Back to People</a>
   </div>
   <header>
-    <h1>Luke Thompson</h1>
+    <h1>Kimberly Palmer</h1>
   </header>
   
   <main>
-    <h3>YouTube Channels</h3>
+    <h3>Links</h3>
     <ul>
-      <li><a href="../channels/whitestonename.html">@WhiteStoneName</a></li>
+      <li><a href="https://www.instagram.com/the.rising.chefs/reel/CtY4ni2N1fp/">https://www.instagram.com/the.rising.chefs/reel/CtY4ni2N1fp/</a></li>
+    </ul>
+    
+    <h3>YouTube Interaction Videos</h3>
+    <ul>
+      <li>2021-11-10 <a href="https://www.youtube.com/watch?v=q7clE0YFb3U">Coffee with Kim and Gavin ‐ Husband and Wife share their morning coffee convo</a></li>
     </ul>
     </main>
   <!-- Footer and additional content -->
