gavin and jason

--- a/people/chad-(the-alcoholic).html
+++ b/people/chad-(the-alcoholic).html
@@ -21,6 +21,11 @@
     <ul>
       <li><a href="../channels/thefridaymorningnameless7623.html">@thefridaymorningnameless7623</a></li>
     </ul>
+    
+    <h3>YouTube Interaction Videos</h3>
+    <ul>
+      <li>2021-11-14 <a href="https://www.youtube.com/watch?v=mPbUTVO2O8w">Mind Reading - Gavin and Chad</a></li>
+    </ul>
     </main>
   <!-- Footer and additional content -->
   <footer class="footer"></footer>
