gavin and jason and a table

--- a/people/jason-delport.html
+++ b/people/jason-delport.html
@@ -24,7 +24,7 @@
     
     <h3>YouTube Interaction Videos</h3>
     <ul>
-      <li>2021-10-29 <a href="https://www.youtube.com/watch?v=xH1-4-Qepz8">herolfg #43 - how to do peace on Earth</a></li><li>2021-11-23 <a href="https://www.youtube.com/watch?v=V6lwRfG9KXU">The Anonymous King ‐ Jason and Gavin</a></li>
+      <li>2021-10-29 <a href="https://www.youtube.com/watch?v=xH1-4-Qepz8">herolfg #43 - how to do peace on Earth</a></li><li>2021-11-23 <a href="https://www.youtube.com/watch?v=V6lwRfG9KXU">The Anonymous King ‐ Jason and Gavin</a></li><li>2021-12-08 <a href="https://www.youtube.com/watch?v=bpmjOwt7TC0">Building the World's Table - Jason, Gavin, and the project that might reform the world</a></li>
     </ul>
     </main>
   <!-- Footer and additional content -->
