more people and info

--- a/people/jonathan-dumeer.html
+++ b/people/jonathan-dumeer.html
@@ -21,6 +21,11 @@
     <ul>
       <li><a href="../channels/jonathandumeer.html">@JonathanDumeer</a></li>
     </ul>
+    
+    <h3>YouTube Interaction Videos</h3>
+    <ul>
+      <li>2023-12-26 <a href="https://www.youtube.com/watch?v=1zYNrAYhvyc">Unscripted Conversation with @JonathanDumeer</a></li>
+    </ul>
     </main>
   <!-- Footer and additional content -->
   <footer class="footer"></footer>
