--- a/people/tayo-falayi.html
+++ b/people/tayo-falayi.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chad (the Alcoholic) - Profile</title>
+  <title>Tayo Falayi - Profile</title>
   <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
@@ -13,18 +13,13 @@
     <a href="index.html">← Back to People</a>
   </div>
   <header>
-    <h1>Chad (the Alcoholic)</h1>
+    <h1>Tayo Falayi</h1>
   </header>
   
   <main>
     <h3>YouTube Channels</h3>
     <ul>
-      <li><a href="../channels/thefridaymorningnameless7623.html">@thefridaymorningnameless7623</a></li><li><a href="../channels/chadthealcoholic.html">@ChadTheAlcoholic</a></li>
-    </ul>
-    
-    <h3>YouTube Interaction Videos</h3>
-    <ul>
-      <li>2021-11-14 <a href="https://www.youtube.com/watch?v=mPbUTVO2O8w">Mind Reading - Gavin and Chad</a></li>
+      <li><a href="../channels/teestrypzsog.html">@teestrypzSOG</a></li>
     </ul>
     </main>
   <!-- Footer and additional content -->
