--- a/channels/faturechi.html
+++ b/channels/faturechi.html
@@ -15,12 +15,9 @@
   <header>
     <h1>@faturechi</h1>
     <p>Owned by <a href="../people/jacob-faturechi.html">Jacob Faturechi</a></p>
+    <p><a href="https://www.youtube.com/@faturechi">go to channel</a></p>
   </header>
-  <main>
-    <h2>About the Channel</h2>
-    <p>I mostly make videos about the Hebrew Bible.</p>
-    <aside></aside>
-  </main>
+  <main></main>
   <!-- Footer and additional content -->
   <footer class="footer"></footer>
 </body>
