--- a/channels/grimgriz.html
+++ b/channels/grimgriz.html
@@ -15,12 +15,9 @@
   <header>
     <h1>@GrimGriz</h1>
     <p>Owned by <a href="../people/grimgriz.html">GrimGriz</a></p>
+    <p><a href="https://www.youtube.com/@GrimGriz">go to channel</a></p>
   </header>
-  <main>
-    <h2>About the Channel</h2>
-    <p>Even Broken Clocks are right twice a day.</p>
-    <aside></aside>
-  </main>
+  <main></main>
   <!-- Footer and additional content -->
   <footer class="footer"></footer>
 </body>
