--- a/channels/herolfg.html
+++ b/channels/herolfg.html
@@ -15,17 +15,9 @@
   <header>
     <h1>@HeroLFG</h1>
     <p>Owned by <a href="../people/gavin-palmer.html">Gavin Palmer</a></p>
+    <p><a href="https://www.youtube.com/@HeroLFG">go to channel</a></p>
   </header>
-  <main>
-    <h2>About the Channel</h2>
-    <p>Seeking the ideal.</p>
-    <aside>
-    <h3>Interests</h3>
-    <ul>
-      <li>technology</li>
-    </ul>
-</aside>
-  </main>
+  <main></main>
   <!-- Footer and additional content -->
   <footer class="footer"></footer>
 </body>
