--- a/channels/livingstoneschristianrefor6073.html
+++ b/channels/livingstoneschristianrefor6073.html
@@ -15,12 +15,9 @@
   <header>
     <h1>@livingstoneschristianrefor6073</h1>
     <p>Owned by <a href="../people/paul-vanderklay.html">Paul VanderKlay</a></p>
+    <p><a href="https://www.youtube.com/@livingstoneschristianrefor6073">go to channel</a></p>
   </header>
-  <main>
-    <h2>About the Channel</h2>
-    <p>Video from Living Stones CRC</p>
-    <aside></aside>
-  </main>
+  <main></main>
   <!-- Footer and additional content -->
   <footer class="footer"></footer>
 </body>
