--- a/channels/lucasvoz.html
+++ b/channels/lucasvoz.html
@@ -15,12 +15,13 @@
   <header>
     <h1>@Lucasvoz</h1>
     <p>Owned by <a href="../people/lucas-vos.html">Lucas Vos</a></p>
+    <p><a href="https://www.youtube.com/@Lucasvoz">go to channel</a></p>
   </header>
   <main>
     <h2>About the Channel</h2>
     <p>undefined</p>
     <aside></aside>
-  </main>
+    </main>
   <!-- Footer and additional content -->
   <footer class="footer"></footer>
 </body>
