--- a/channels/marklefebvre5758.html
+++ b/channels/marklefebvre5758.html
@@ -15,12 +15,9 @@
   <header>
     <h1>@marklefebvre5758</h1>
     <p>Owned by <a href="../people/mark-lefebvre.html">Mark Lefebvre</a></p>
+    <p><a href="https://www.youtube.com/@marklefebvre5758">go to channel</a></p>
   </header>
-  <main>
-    <h2>About the Channel</h2>
-    <p>Just me talking about various things which are on my mind at one point or another. Stories, observations, nothing fancy.</p>
-    <aside></aside>
-  </main>
+  <main></main>
   <!-- Footer and additional content -->
   <footer class="footer"></footer>
 </body>
