--- a/channels/navigatingpatterns.html
+++ b/channels/navigatingpatterns.html
@@ -15,14 +15,9 @@
   <header>
     <h1>@NavigatingPatterns</h1>
     <p>Owned by <a href="../people/mark-lefebvre.html">Mark Lefebvre</a></p>
+    <p><a href="https://www.youtube.com/@NavigatingPatterns">go to channel</a></p>
   </header>
-  <main>
-    <h2>About the Channel</h2>
-    <p>Here I shall be discussing how to orient and navigate the patterns in the world.  This will include our usage of words, models for understand the world, and the best way to structure our ideas. Topics will include meaning, the Intimacy crisis, sense making in the world, models that helps us map reality.  How we use our language matters to how we interact in the world. The nature of meaning, definition, context all determine how well we can discern, judge and act!
- I'll be exploring lots of topics in videos alone, with others and livestreams!
- Come and join our community of sense making in this chaotic world!</p>
-    <aside></aside>
-  </main>
+  <main></main>
   <!-- Footer and additional content -->
   <footer class="footer"></footer>
 </body>
