--- a/channels/paulvanderklay.html
+++ b/channels/paulvanderklay.html
@@ -15,12 +15,9 @@
   <header>
     <h1>@PaulVanderKlay</h1>
     <p>Owned by <a href="../people/paul-vanderklay.html">Paul VanderKlay</a></p>
+    <p><a href="https://www.youtube.com/@PaulVanderKlay">go to channel</a></p>
   </header>
-  <main>
-    <h2>About the Channel</h2>
-    <p>I want to major in equipping those who follow me with the things that "against such things there is no law".</p>
-    <aside></aside>
-  </main>
+  <main></main>
   <!-- Footer and additional content -->
   <footer class="footer"></footer>
 </body>
