--- a/channels/rightinchrist.html
+++ b/channels/rightinchrist.html
@@ -15,17 +15,9 @@
   <header>
     <h1>@RightInChrist</h1>
     <p>Owned by <a href="../people/gavin-palmer.html">Gavin Palmer</a></p>
+    <p><a href="https://www.youtube.com/@RightInChrist">go to channel</a></p>
   </header>
-  <main>
-    <h2>About the Channel</h2>
-    <p>I decided to practice making Jesus my king on October 12, 2023. My videos will attempt to point people towards a relationship with God through Jesus who will go after the lost sheep. My king goes after your worst enemy to give them the best gift which is to know God.</p>
-    <aside>
-    <h3>Interests</h3>
-    <ul>
-      <li>practicing loving people</li><li>technology</li><li>play</li>
-    </ul>
-</aside>
-  </main>
+  <main></main>
   <!-- Footer and additional content -->
   <footer class="footer"></footer>
 </body>
