--- a/channels/the-chris-show.html
+++ b/channels/the-chris-show.html
@@ -15,12 +15,9 @@
   <header>
     <h1>@the-chris-show</h1>
     <p>Owned by <a href="../people/chris-petkau.html">Chris Petkau</a></p>
+    <p><a href="https://www.youtube.com/@the-chris-show">go to channel</a></p>
   </header>
-  <main>
-    <h2>About the Channel</h2>
-    <p>Not everybody's name is Chris and not everybody has a show. But even less people named Chris have a show. My name is Chris, and this is my show. </p>
-    <aside></aside>
-  </main>
+  <main></main>
   <!-- Footer and additional content -->
   <footer class="footer"></footer>
 </body>
