--- a/channels/themeaningcode.html
+++ b/channels/themeaningcode.html
@@ -15,14 +15,9 @@
   <header>
     <h1>@TheMeaningCode</h1>
     <p>Owned by <a href="../people/karen-wong.html">Karen Wong</a></p>
+    <p><a href="https://www.youtube.com/@TheMeaningCode">go to channel</a></p>
   </header>
-  <main>
-    <h2>About the Channel</h2>
-    <p>Mapping the universe through physics, art, economics, philosophy, and more.
- The search for meaning through connections from one domain of knowledge to another.
- Finding the code that connects the substructures of the universe.</p>
-    <aside></aside>
-  </main>
+  <main></main>
   <!-- Footer and additional content -->
   <footer class="footer"></footer>
 </body>
