--- a/channels/wavesofobsession.html
+++ b/channels/wavesofobsession.html
@@ -15,12 +15,9 @@
   <header>
     <h1>@WavesOfObsession</h1>
     <p>Owned by <a href="../people/chris-mcdonald.html">Chris McDonald</a></p>
+    <p><a href="https://www.youtube.com/@WavesOfObsession">go to channel</a></p>
   </header>
-  <main>
-    <h2>About the Channel</h2>
-    <p>undefined</p>
-    <aside></aside>
-  </main>
+  <main></main>
   <!-- Footer and additional content -->
   <footer class="footer"></footer>
 </body>
