--- a/channels/fatdaddyentertainment.html
+++ b/channels/fatdaddyentertainment.html
@@ -15,17 +15,9 @@
   <header>
     <h1>@FatDaddyEntertainment</h1>
     <p>Owned by <a href="../people/gavin-palmer.html">Gavin Palmer</a></p>
+    <p><a href="https://www.youtube.com/@FatDaddyEntertainment">go to channel</a></p>
   </header>
-  <main>
-    <h2>About the Channel</h2>
-    <p>Fun with friends and family.</p>
-    <aside>
-    <h3>Interests</h3>
-    <ul>
-      <li>play</li>
-    </ul>
-</aside>
-  </main>
+  <main></main>
   <!-- Footer and additional content -->
   <footer class="footer"></footer>
 </body>
