--- a/channels/jonathandumeer.html
+++ b/channels/jonathandumeer.html
@@ -15,12 +15,9 @@
   <header>
     <h1>@JonathanDumeer</h1>
     <p>Owned by <a href="../people/jonathan-dumeer.html">Jonathan Dumeer</a></p>
+    <p><a href="https://www.youtube.com/@JonathanDumeer">go to channel</a></p>
   </header>
-  <main>
-    <h2>About the Channel</h2>
-    <p>undefined</p>
-    <aside></aside>
-  </main>
+  <main></main>
   <!-- Footer and additional content -->
   <footer class="footer"></footer>
 </body>
