--- a/channels/mercury.black..html
+++ b/channels/mercury.black..html
@@ -15,12 +15,9 @@
   <header>
     <h1>@Mercury.Black.</h1>
     <p>Owned by <a href="../people/mercury.black..html">Mercury.Black.</a></p>
+    <p><a href="https://www.youtube.com/@Mercury.Black.">go to channel</a></p>
   </header>
-  <main>
-    <h2>About the Channel</h2>
-    <p>undefined</p>
-    <aside></aside>
-  </main>
+  <main></main>
   <!-- Footer and additional content -->
   <footer class="footer"></footer>
 </body>
