--- a/channels/neal_daedalus.html
+++ b/channels/neal_daedalus.html
@@ -15,12 +15,9 @@
   <header>
     <h1>@Neal_Daedalus</h1>
     <p>Owned by <a href="../people/neal.html">Neal</a></p>
+    <p><a href="https://www.youtube.com/@Neal_Daedalus">go to channel</a></p>
   </header>
-  <main>
-    <h2>About the Channel</h2>
-    <p>undefined</p>
-    <aside></aside>
-  </main>
+  <main></main>
   <!-- Footer and additional content -->
   <footer class="footer"></footer>
 </body>
