--- a/channels/thefridaymorningnameless7623.html
+++ b/channels/thefridaymorningnameless7623.html
@@ -15,12 +15,9 @@
   <header>
     <h1>@thefridaymorningnameless7623</h1>
     <p>Owned by <a href="../people/chad-(the-alcoholic).html">Chad (the Alcoholic)</a></p>
+    <p><a href="https://www.youtube.com/@thefridaymorningnameless7623">go to channel</a></p>
   </header>
-  <main>
-    <h2>About the Channel</h2>
-    <p>undefined</p>
-    <aside></aside>
-  </main>
+  <main></main>
   <!-- Footer and additional content -->
   <footer class="footer"></footer>
 </body>
