--- a/channels/theplebistocrat.html
+++ b/channels/theplebistocrat.html
@@ -15,12 +15,9 @@
   <header>
     <h1>@ThePlebistocrat</h1>
     <p>Owned by <a href="../people/tyler-hollett.html">Tyler Hollett</a></p>
+    <p><a href="https://www.youtube.com/@ThePlebistocrat">go to channel</a></p>
   </header>
-  <main>
-    <h2>About the Channel</h2>
-    <p>undefined</p>
-    <aside></aside>
-  </main>
+  <main></main>
   <!-- Footer and additional content -->
   <footer class="footer"></footer>
 </body>
