--- a/channels/vanderklips.html
+++ b/channels/vanderklips.html
@@ -15,12 +15,9 @@
   <header>
     <h1>@VanderKlips</h1>
     <p>Owned by <a href="../people/paul-vanderklay.html">Paul VanderKlay</a></p>
+    <p><a href="https://www.youtube.com/@VanderKlips">go to channel</a></p>
   </header>
-  <main>
-    <h2>About the Channel</h2>
-    <p>undefined</p>
-    <aside></aside>
-  </main>
+  <main></main>
   <!-- Footer and additional content -->
   <footer class="footer"></footer>
 </body>
