--- a/channels/whitestonename.html
+++ b/channels/whitestonename.html
@@ -15,12 +15,9 @@
   <header>
     <h1>@WhiteStoneName</h1>
     <p>Owned by <a href="../people/luke-thompson.html">Luke Thompson</a></p>
+    <p><a href="https://www.youtube.com/@WhiteStoneName">go to channel</a></p>
   </header>
-  <main>
-    <h2>About the Channel</h2>
-    <p>A video diary of intellectual musings. Mainly about God, faith, community, ontology. I ruminate & contemplate on things  in a circumambulating way. “When I talk about anything, I’m talking about everything.”</p>
-    <aside></aside>
-  </main>
+  <main></main>
   <!-- Footer and additional content -->
   <footer class="footer"></footer>
 </body>
