--- a/people/haris-neophytou.html
+++ b/people/haris-neophytou.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Karen Wong - Profile</title>
+  <title>Haris Neophytou - Profile</title>
   <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
@@ -13,20 +13,13 @@
     <a href="index.html">← Back to People</a>
   </div>
   <header>
-    <h1>Karen Wong</h1>
+    <h1>Haris Neophytou</h1>
   </header>
   
-    <div class="">
-      <h2>About</h2>
-      <p>Mapping the universe through physics, art, economics, philosophy, and more.
- The search for meaning through connections from one domain of knowledge to another.
- Finding the code that connects the substructures of the universe.</p>
-    </div>
-    
   <main>
     <h3>YouTube Channels</h3>
     <ul>
-      <li><a href="../channels/themeaningcode.html">@TheMeaningCode</a></li>
+      <li><a href="../channels/upcycleclub.html">@UpCycleClub</a></li>
     </ul>
     
     <h3>YouTube Interaction Videos</h3>
