--- a/people/grimgriz.html
+++ b/people/grimgriz.html
@@ -19,7 +19,7 @@
   <main>
     <h3>YouTube Channels</h3>
     <ul>
-      <li><a href="../channels/grimgriz.html">@GrimGriz</a></li>
+      <li><a href="../channels/grimgriz.html">@GrimGriz</a></li><li><a href="../channels/afterdark4452.html">@afterdark4452</a></li>
     </ul>
     
     <h3>YouTube Interaction Videos</h3>
