--- a/people/chad-(the-alcoholic).html
+++ b/people/chad-(the-alcoholic).html
@@ -19,7 +19,7 @@
   <main>
     <h3>YouTube Channels</h3>
     <ul>
-      <li><a href="../channels/thefridaymorningnameless7623.html">@thefridaymorningnameless7623</a></li><li><a href="../channels/chadthealcoholic.html">@ChadTheAlcoholic</a></li>
+      <li><a href="../channels/thefridaymorningnameless7623.html">@thefridaymorningnameless7623</a></li><li><a href="../channels/chadthealcoholic.html">@ChadTheAlcoholic</a></li><li><a href="../channels/chada101.html">@chadA101</a></li>
     </ul>
     
     <h3>YouTube Interaction Videos</h3>
