--- a/people/tpv_tragula.html
+++ b/people/tpv_tragula.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mercury.Black. - Profile</title>
+  <title>tpv_tragula - Profile</title>
   <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
@@ -13,18 +13,13 @@
     <a href="index.html">← Back to People</a>
   </div>
   <header>
-    <h1>Mercury.Black.</h1>
+    <h1>tpv_tragula</h1>
   </header>
   
   <main>
     <h3>YouTube Channels</h3>
     <ul>
-      <li><a href="../channels/mercury.black..html">@Mercury.Black.</a></li><li><a href="../channels/pordanbjeterson.html">@PordanBJeterson</a></li>
-    </ul>
-    
-    <h3>YouTube Interaction Videos</h3>
-    <ul>
-      <li>2021-01-01 <a href="https://www.youtube.com/watch?v=s1I4Vxv61QA">Sorting Myself Out with Mercury, Gavin, and GrimGriz</a></li>
+      <li><a href="../channels/tpv_tragula.html">@tpv_tragula</a></li>
     </ul>
     </main>
   <!-- Footer and additional content -->
