--- a/people/jordan-hall.html
+++ b/people/jordan-hall.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mercury.Black. - Profile</title>
+  <title>Jordan Hall - Profile</title>
   <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
@@ -13,18 +13,18 @@
     <a href="index.html">← Back to People</a>
   </div>
   <header>
-    <h1>Mercury.Black.</h1>
+    <h1>Jordan Hall</h1>
   </header>
   
   <main>
-    <h3>YouTube Channels</h3>
+    <h3>Links</h3>
     <ul>
-      <li><a href="../channels/mercury.black..html">@Mercury.Black.</a></li><li><a href="../channels/pordanbjeterson.html">@PordanBJeterson</a></li>
+      <li><a href="https://medium.com/deep-code">https://medium.com/deep-code</a></li>
     </ul>
     
-    <h3>YouTube Interaction Videos</h3>
+    <h3>YouTube Channels</h3>
     <ul>
-      <li>2021-01-01 <a href="https://www.youtube.com/watch?v=s1I4Vxv61QA">Sorting Myself Out with Mercury, Gavin, and GrimGriz</a></li>
+      <li><a href="../channels/jordangreenhall.html">@JordanGreenhall</a></li>
     </ul>
     </main>
   <!-- Footer and additional content -->
