--- a/channels/einsofinfinitereflections9390.html
+++ b/channels/einsofinfinitereflections9390.html
@@ -14,7 +14,7 @@
   </div>
   <header>
     <h1>@einsofinfinitereflections9390</h1>
-    <p>Owned by <a href="../people/yosef.html">Yosef</a></p>
+    <p>Owned by <a href="../people/yosef-razin.html">Yosef Razin</a></p>
     <p><a href="https://www.youtube.com/@einsofinfinitereflections9390">go to channel</a></p>
   </header>
   <main></main>
