--- a/people/gavin-palmer.html
+++ b/people/gavin-palmer.html
@@ -29,7 +29,7 @@
     
     <h3>Interests</h3>
     <ul>
-      <li>practicing loving people</li><li>technology</li><li>play</li>
+      <li>practicing loving people</li><li>technology</li><li>play</li><li>marriage</li><li>parenting</li><li>teamwork</li>
     </ul>
     
     <h3>YouTube Attention Giving Self Report</h3>
