--- a/people/jason-schweizer.html
+++ b/people/jason-schweizer.html
@@ -5,19 +5,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>@almondtree</title>
+  <title>Jason Schweizer - Profile</title>
   <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
   <div class="navigation-back">
-    <a href="index.html">← Back to Channels</a>
+    <a href="index.html">← Back to People</a>
   </div>
   <header>
-    <h1>@almondtree</h1>
-    <p>Owned by <a href="../people/jason-schweizer.html">Jason Schweizer</a></p>
-    <p><a href="https://www.youtube.com/@almondtree">go to channel</a></p>
+    <h1>Jason Schweizer</h1>
   </header>
-  <main></main>
+  
+  <main>
+    <h3>YouTube Channels</h3>
+    <ul>
+      <li><a href="../channels/almondtree.html">@almondtree</a></li>
+    </ul>
+    </main>
   <!-- Footer and additional content -->
   <footer class="footer"></footer>
 </body>
