--- a/people/yosef-razin.html
+++ b/people/yosef-razin.html
@@ -5,22 +5,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title></title>
+  <title>Yosef Razin - Profile</title>
   <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
   <div class="navigation-back">
-    <a href="index.html">← Back to Channels</a>
+    <a href="index.html">← Back to People</a>
   </div>
   <header>
-    <h1></h1>
-    <p>Owned by <a href="../people/tyler-hollett.html">Tyler Hollett</a></p>
+    <h1>Yosef Razin</h1>
   </header>
+  
   <main>
-    <h2>About the Channel</h2>
-    <p>undefined</p>
-    <aside></aside>
-  </main>
+    <h3>YouTube Channels</h3>
+    <ul>
+      <li><a href="../channels/einsofinfinitereflections9390.html">@einsofinfinitereflections9390</a></li>
+    </ul>
+    </main>
   <!-- Footer and additional content -->
   <footer class="footer"></footer>
 </body>
